# n_rf24l01_library

./: n_rf24l01_core.h  readme.txt
core/: n_rf24l01.c  n_rf24l01.h  readme.txt
linux/: .gitignore  CMakeLists.txt  config.h.in  deploy_build.sh  n_rf24l01_linux.h  readme.txt
linux/docker/: Dockerfile  arm-linux-gnueabihf-cmake-toolchain.cmake  build_target.sh
linux/src/linux_spi_dev/: n_rf24l01.c  n_rf24l01_backend.c  n_rf24l01_backend.h  prepare.sh  readme.txt
src/: n_rf24l01.c  n_rf24l01.h  n_rf24l01_port.h
